--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-  <title>GANESH · premium matka</title>
+  <title>FIX GAME 777 · premium matka</title>
   <!-- Font Awesome 6 -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <!-- Google Font: Outfit -->
@@ -258,8 +258,8 @@
       margin: 1.5rem 0;
     }
     .qr-image {
-      width: 160px;
-      height: 160px;
+      width: 200px;
+      height: 200px;
       border-radius: 2rem;
       border: 3px solid #38bdf8;
       margin: 1rem auto;
@@ -461,7 +461,7 @@
     <!-- LOGIN PAGE -->
 <div id="login-page" class="page active">
   <div class="extra-refresh"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH</button></div>
-  <h2>GANESH</h2>
+  <h2>FIX GAME 777</h2>
   <div class="logo-banner">
     <img src="https://i.supaimg.com/d026f774-60e1-4925-88e1-75281544a80e/c33ecce6-da20-4047-a0ce-df100fbd6657.png" alt="Logo">
   </div>
@@ -546,7 +546,7 @@
   </div>
   <div class="extra-refresh" style="justify-content:center;"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH PAGE</button></div>
 </div>
-<!-- DASHBOARD PAGE (single page with all markets) -->
+<!-- DASHBOARD PAGE -->
 <div id="dashboard-page" class="page">
   <div class="extra-refresh"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH</button></div>
   <div style="display:flex; justify-content:space-between; align-items:center;">
@@ -557,7 +557,6 @@
     </div>
   </div>
 
-  <!-- Welcome card -->
   <div class="welcome-card">
     <i class="fas fa-crown"></i>
     <div class="welcome-text">
@@ -566,12 +565,10 @@
     </div>
   </div>
 
-  <!-- First image -->
   <div class="big-image">
     <img src="https://i.supaimg.com/d026f774-60e1-4925-88e1-75281544a80e/e6d32229-8638-4d0d-8168-0ecf26c97511.jpg" alt="Dashboard 1">
   </div>
 
-  <!-- Market List (single) -->
   <div class="market-list">
     <div class="market-item" data-market="sridevi">Sridevi <span class="market-time">10:00 AM</span></div>
     <div class="market-item" data-market="timebazar">Time Bazar <span class="market-time">12:00 PM</span></div>
@@ -588,7 +585,6 @@
 
   <button class="btn btn-small" id="goto-subscription">SUBSCRIPTION</button>
 
-  <!-- Second image -->
   <div class="big-image">
     <img src="https://i.supaimg.com/d026f774-60e1-4925-88e1-75281544a80e/a3bf0825-c851-401d-b7e6-4b2e27fb9fb9.jpg" alt="Dashboard 2">
   </div>
@@ -607,8 +603,8 @@
     <button class="nav-btn" id="logout"><i class="fas fa-sign-out-alt"></i> LOGOUT</button>
   </div>
   <div class="extra-refresh" style="justify-content:center;"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH PAGE</button></div>
-  </div>
-  <!-- SUBSCRIPTION PAGE (Plan selection + QR) -->
+</div>
+<!-- SUBSCRIPTION PAGE -->
 <div id="subscription-page" class="page">
   <div class="extra-refresh"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH</button></div>
   <div class="big-image">
@@ -617,7 +613,6 @@
 
   <h2>MEMBERSHIP</h2>
 
-  <!-- Plan cards -->
   <div class="plan-container">
     <div class="plan-card" id="plan-1day">
       <div>1 DAY</div>
@@ -638,6 +633,7 @@
       <i class="fas fa-qrcode"></i> UPI ID: mayursinh.72rathod72@okhdfcbank
     </div>
     <p style="font-size:0.8rem;">Scan via PhonePe, GPay, Paytm, any UPI</p>
+    <p style="color:#fbbf24; font-size:0.9rem; margin-top:0.5rem;">After payment done, send screenshot on WhatsApp or Telegram</p>
   </div>
 
   <div class="helpline-card">
@@ -654,8 +650,8 @@
     <img id="sub-bottom-img" src="https://i.supaimg.com/d026f774-60e1-4925-88e1-75281544a80e/c33ecce6-da20-4047-a0ce-df100fbd6657.png" alt="Bottom">
   </div>
   <div class="extra-refresh" style="justify-content:center;"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH PAGE</button></div>
-    </div>
-    <!-- PROCESSING PAGE (after payment) -->
+  </div>
+  <!-- PROCESSING PAGE -->
 <div id="processing-page" class="page">
   <div class="extra-refresh"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH</button></div>
   <h2>PROCESSING</h2>
@@ -673,7 +669,7 @@
   <div class="extra-refresh" style="justify-content:center;"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH PAGE</button></div>
 </div>
 
-<!-- Market Result Modal (hidden by default) -->
+<!-- Market Result Modal -->
 <div id="market-modal" class="modal-overlay">
   <div class="modal-content">
     <h3 id="modal-market-title">KALYAN</h3>
@@ -712,11 +708,11 @@
     <div style="display:flex; flex-direction:column; gap:1rem;">
       <div class="helpline-link" style="justify-content:center;"><i class="fas fa-phone-alt"></i> +91 7353547650</div>
       <div class="helpline-link" style="justify-content:center;"><i class="fab fa-whatsapp"></i> +91 7353547650</div>
-      <div class="helpline-link" style="justify-content:center;"><i class="fab fa-telegram"></i> @rudrakshank</div>
+      <div class="helpline-link" style="justify-content:center;"><i class="fab fa-telegram"></i> <a href="tg://resolve?domain=rudrakshankg" style="color:#e2e8f0; text-decoration:none;">@rudrakshankg</a> (App) | <a href="https://t.me/rudrakshankg" style="color:#e2e8f0;">Web</a></div>
     </div>
     <div class="notice" style="margin-top:1.5rem;">
       <strong style="color:#38bdf8;">📢 ABOUT</strong><br>
-      GANESH is a premium matka guessing platform. All results are based on astrological calculations. We are not affiliated with any illegal business.
+      FIX GAME 777 is a premium matka guessing platform. All results are based on astrological calculations. We are not affiliated with any illegal business.
     </div>
     <div class="nav-bar">
       <button class="nav-btn" id="back-from-info"><i class="fas fa-arrow-left"></i> BACK</button>
@@ -725,13 +721,19 @@
     <div class="extra-refresh" style="justify-content:center;"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH PAGE</button></div>
   </div>
 </div> <!-- end #app -->
-    <!-- Firebase SDKs (with cache‑busting version) -->
+    <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
 
-  <!-- Market data – version number prevents caching (increment when editing) -->
-  <script src="market-data.js?v=20250225"></script>
+  <!-- Load market data with automatic cache‑busting (no manual version needed) -->
+  <script>
+    (function() {
+      var script = document.createElement('script');
+      script.src = 'market-data.js?v=' + Date.now(); // unique timestamp
+      document.head.appendChild(script);
+    })();
+  </script>
 
   <script>
     // 🔥 YOUR FIREBASE CONFIG (replace with your new project)
@@ -748,7 +750,8 @@
     const auth = firebase.auth();
     const db = firebase.firestore();
 
-    const config = marketConfig;  // from external file
+    // `marketConfig` is now globally available from the dynamically loaded script
+    const config = marketConfig;
 
     // ---------- Helper Functions ----------
     function showPage(pageId) {
@@ -756,7 +759,6 @@
       document.getElementById(pageId).classList.add('active');
     }
 
-    // Show market results in modal
     function showMarketModal(marketKey) {
       const market = config.markets[marketKey];
       if (!market) return;
@@ -812,7 +814,6 @@
       }
     }
 
-    // Payment processing
     let processingInterval = null;
     let processingEndTime = null;
     const PROCESSING_TIMEOUT = 10 * 60 * 1000; // 10 minutes
@@ -821,7 +822,6 @@
       const user = auth.currentUser;
       if (!user) return;
 
-      // Store plan in session for later use
       sessionStorage.setItem('selectedPlan', plan);
 
       showPage('processing-page');
@@ -844,7 +844,6 @@
         const secs = Math.floor((remaining % 60000) / 1000);
         timerEl.innerText = `⏳ Time left: ${mins}:${secs < 10 ? '0' : ''}${secs}`;
 
-        // Check subscription status
         const user = auth.currentUser;
         if (user) {
           const doc = await db.collection('users').doc(user.uid).get();
@@ -858,7 +857,6 @@
       }, 3000);
     }
 
-    // Toast for reload
     function showReloadToast() {
       const toast = document.getElementById('toast');
       toast.classList.add('show');
@@ -867,12 +865,11 @@
     window.addEventListener('pageshow', showReloadToast);
     showReloadToast();
 
-    // Loading screen
     if (!document.getElementById('loading-screen')) {
       const ld = document.createElement('div');
       ld.id = 'loading-screen';
       ld.style.cssText = 'position:fixed; top:0; left:0; width:100%; height:100%; background:#030712; display:flex; align-items:center; justify-content:center; z-index:9999;';
-      ld.innerHTML = '<div style="text-align:center; color:#38bdf8;"><div style="font-size:3rem;">🕉️</div><div>loading GANESH ...</div></div>';
+      ld.innerHTML = '<div style="text-align:center; color:#38bdf8;"><div style="font-size:3rem;">🕉️</div><div>loading ...</div></div>';
       document.body.appendChild(ld);
     }
     function hideLoading() {
@@ -880,7 +877,6 @@
       if (loader) { loader.style.opacity = '0'; setTimeout(() => loader.remove(), 300); }
     }
 
-    // Back button handling
     let backPressedOnce = false;
     window.addEventListener('popstate', (e) => {
       const cur = document.querySelector('.page.active').id;
@@ -906,7 +902,6 @@
       applyMarketTimesAndNotices();
       updateDateTime();
 
-      // Refresh buttons
       document.getElementById('refresh-dash-bottom')?.addEventListener('click', () => location.reload());
 
       // Login
@@ -924,13 +919,10 @@
           });
       });
 
-      // Go to register page
       document.getElementById('goto-register-btn').addEventListener('click', () => showPage('register-page'));
-
-      // Back to login from register
       document.getElementById('back-to-login-btn').addEventListener('click', () => showPage('login-page'));
 
-      // Register new user
+      // Register
       document.getElementById('register-btn').addEventListener('click', async (e) => {
         e.preventDefault();
         const name = document.getElementById('reg-name').value.trim();
@@ -957,10 +949,9 @@
         }
       });
 
-      // Logout
       document.getElementById('logout').addEventListener('click', () => auth.signOut());
 
-      // Paid button – open WhatsApp and start processing
+      // Paid button
       document.getElementById('paid-btn').addEventListener('click', async () => {
         const user = auth.currentUser;
         if (!user) { alert('Login required'); return; }
@@ -981,7 +972,6 @@
         } catch (er) { alert('Error: ' + er.message); }
       });
 
-      // Cancel processing
       document.getElementById('cancel-processing').addEventListener('click', () => {
         if (processingInterval) clearInterval(processingInterval);
         processingInterval = null;
@@ -1006,12 +996,11 @@
       document.getElementById('back-from-profile')?.addEventListener('click', () => showPage('dashboard-page'));
       document.getElementById('back-from-info')?.addEventListener('click', () => showPage('dashboard-page'));
 
-      // Close modal
       document.getElementById('close-modal-btn').addEventListener('click', () => {
         document.getElementById('market-modal').classList.remove('show');
       });
 
-      // Market item clicks – open modal if subscribed
+      // Market item clicks
       document.querySelectorAll('.market-item').forEach(el => {
         el.addEventListener('click', async (e) => {
           const key = e.currentTarget.getAttribute('data-market');
@@ -1025,12 +1014,10 @@
               showMarketModal(key);
             } else {
               alert('Subscription not active. Please contact admin.');
-              showPage('subscription-page');
             }
           } catch (err) {
             console.error(err);
             alert('Error checking subscription.');
-            showPage('subscription-page');
           }
         });
       });
@@ -1045,12 +1032,10 @@
         if (user) {
           try {
             const data = await ensureUserDocument(user);
-            // Update dashboard greeting
             const greeting = document.getElementById('dashboard-greeting');
             if (greeting) greeting.innerText = `Welcome, ${user.displayName || 'User'}`;
             const statusEl = document.getElementById('dashboard-status');
             if (statusEl) statusEl.innerText = data.subscriptionActive ? 'Active' : 'Inactive';
-            // Update profile
             document.getElementById('profile-name').innerText = user.displayName || 'User';
             document.getElementById('profile-mobile').innerText = data.mobile || (user.email ? user.email.replace('@matka.com','') : '');
             document.getElementById('sub-status').innerText = data.subscriptionActive ? 'Active' : 'Inactive';
@@ -1058,15 +1043,14 @@
               const d = data.createdAt.toDate ? data.createdAt.toDate() : new Date();
               document.getElementById('profile-join').innerText = d.toLocaleDateString();
             }
-            // If we're on processing page and subscription became active, redirect
             if (document.getElementById('processing-page').classList.contains('active') && data.subscriptionActive) {
               clearInterval(processingInterval);
               processingInterval = null;
               showPage('dashboard-page');
             } else {
-              showPage(data.subscriptionActive ? 'dashboard-page' : 'subscription-page');
+              showPage('dashboard-page');
             }
-          } catch { showPage('subscription-page'); }
+          } catch { showPage('dashboard-page'); }
         } else showPage('login-page');
         if (authInit) hideLoading();
       });
@@ -1074,4 +1058,4 @@
     });
   </script>
 </body>
-  </html>
+</html>
