--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
   font-weight: 600;
   cursor: pointer;
   margin-top: 1rem;
-  }
+    }
         .processing-container {
       text-align: center;
       padding: 2rem 1rem;
@@ -560,8 +560,15 @@
 
   <div class="big-image">
     <img src="https://i.supaimg.com/d026f774-60e1-4925-88e1-75281544a80e/e6d32229-8638-4d0d-8168-0ecf26c97511.jpg" alt="Dashboard 1">
+                      </div>
+                        <div class="big-image">
+    <img src="https://i.supaimg.com/d026f774-60e1-4925-88e1-75281544a80e/e6d32229-8638-4d0d-8168-0ecf26c97511.jpg" alt="Dashboard 1">
   </div>
-    <div class="market-list">
+
+  <!-- SUBSCRIPTION BUTTON moved here (between first image and market list) -->
+  <button class="btn btn-small" id="goto-subscription">SUBSCRIPTION</button>
+
+  <div class="market-list">
     <div class="market-item" data-market="sridevi">Sridevi <span class="market-time">10:00 AM</span></div>
     <div class="market-item" data-market="timebazar">Time Bazar <span class="market-time">12:00 PM</span></div>
     <div class="market-item" data-market="milanday">Milan Day <span class="market-time">2:00 PM</span></div>
@@ -575,8 +582,7 @@
     <strong style="color:#38bdf8;">📢 NOTICE BOARD</strong><br>
   </div>
 
-  <button class="btn btn-small" id="goto-subscription">SUBSCRIPTION</button>
-
+  <!-- second image stays here -->
   <div class="big-image">
     <img src="https://i.supaimg.com/d026f774-60e1-4925-88e1-75281544a80e/a3bf0825-c851-401d-b7e6-4b2e27fb9fb9.jpg" alt="Dashboard 2">
   </div>
@@ -596,84 +602,79 @@
   </div>
   <div class="extra-refresh" style="justify-content:center;"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH PAGE</button></div>
 </div>
-
-<!-- SUBSCRIPTION PAGE -->
-<div id="subscription-page" class="page">
-  <div class="extra-refresh"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH</button></div>
-  <div class="big-image">
-    <img id="sub-top-img" src="https://i.supaimg.com/d026f774-60e1-4925-88e1-75281544a80e/f94bbdd7-fa3c-4791-a387-18bd057b2868.jpg" alt="Top">
-  </div>
-
-  <h2>MEMBERSHIP</h2>
-
-  <div class="plan-container">
-    <div class="plan-card" id="plan-1day">
-      <div>1 DAY</div>
-      <div class="price">₹1100</div>
-      <div class="features">✓ Full access<br>✓ 1 day validity</div>
+  <!-- PROCESSING PAGE (no navigation, only spinner and timer) -->
+  <div id="processing-page" class="page">
+    <div class="extra-refresh" style="justify-content:center;">
+      <!-- Refresh button intentionally removed – user should not refresh manually, but if they do, we handle it -->
     </div>
-    <div class="plan-card" id="plan-1week">
-      <div>1 WEEK</div>
-      <div class="price">₹5100</div>
-      <div class="features">✓ Full access<br>✓ 7 days validity<br>✓ Priority support</div>
-    </div>
-  </div>
-
-  <div class="qr-section">
-    <p style="color:#94a3b8;">Select plan & scan QR to pay</p>
-    <img src="https://i.supaimg.com/d026f774-60e1-4925-88e1-75281544a80e/0e62c615-2776-42a3-99b4-252c5fb435c1.png" alt="QR" class="qr-image">
-    <div class="upi-info">
-      <i class="fas fa-qrcode"></i> UPI ID: mayursinh.72rathod72@okhdfcbank
-    </div>
-    <p style="font-size:0.8rem;">Scan via PhonePe, GPay, Paytm, any UPI</p>
-    <p style="color:#fbbf24; font-size:0.9rem; margin-top:0.5rem;">After payment done, send screenshot on WhatsApp or Telegram</p>
-  </div>
-
-  <div class="helpline-card">
-    <a href="https://wa.me/917353547650" target="_blank" class="helpline-link"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-    <a href="tel:+917353547650" class="helpline-link"><i class="fas fa-phone-alt"></i> Call</a>
-  </div>
-
-  <div class="nav-bar">
-    <button class="nav-btn" id="back-from-sub"><i class="fas fa-arrow-left"></i> BACK</button>
-    <button class="nav-btn" id="paid-btn">I HAVE PAID</button>
-  </div>
-
-  <div class="big-image">
-    <img id="sub-bottom-img" src="https://i.supaimg.com/d026f774-60e1-4925-88e1-75281544a80e/c33ecce6-da20-4047-a0ce-df100fbd6657.png" alt="Bottom">
-  </div>
-  <div class="extra-refresh" style="justify-content:center;"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH PAGE</button></div>
-</div>
-<!-- PROCESSING PAGE (no navigation, only spinner and timer) -->
-<div id="processing-page" class="page">
-  <div class="extra-refresh" style="justify-content:center;">
-    <!-- Refresh button intentionally removed – user should not refresh manually, but if they do, we handle it -->
-  </div>
-  <h2>PROCESSING</h2>
-  <div class="processing-container">
-    <div class="spinner"></div>
-    <p style="color:#94a3b8; margin:1rem 0;">Waiting for payment confirmation...</p>
-    <div id="processing-timer" class="timer-message" style="margin:1rem 0;"></div>
-    <div id="processing-fail" style="display: none;" class="fail-message">
-      <i class="fas fa-times-circle" style="color:#f87171;"></i> Transaction incomplete. Please try again or contact support.
-    </div>
-    <!-- Back button appears only after timeout -->
-    <div id="processing-back-btn" style="display: none; margin-top:1rem;">
-      <button class="nav-btn" id="cancel-processing"><i class="fas fa-arrow-left"></i> BACK TO SUBSCRIPTION</button>
-    </div>
-  </div>
-  <!-- No other buttons – user is stuck until timeout or activation -->
-</div>
-
-<!-- MARKET MODAL (unchanged) -->
-<div id="market-modal" class="modal-overlay">
-  <div class="modal-content">
-    <h3 id="modal-market-title">KALYAN</h3>
-    <div class="result-grid" id="modal-result-grid"></div>
-    <button class="close-modal" id="close-modal-btn">CLOSE</button>
-  </div>
+    <h2>PROCESSING</h2>
+    <div class="processing-container">
+      <div class="spinner"></div>
+      <p style="color:#94a3b8; margin:1rem 0;">Waiting for payment confirmation...</p>
+      <div id="processing-timer" class="timer-message" style="margin:1rem 0;"></div>
+      <div id="processing-fail" style="display: none;" class="fail-message">
+        <i class="fas fa-times-circle" style="color:#f87171;"></i> Transaction incomplete. Please try again or contact support.
       </div>
-        <!-- Firebase SDKs -->
+      <!-- Back button appears only after timeout -->
+      <div id="processing-back-btn" style="display: none; margin-top:1rem;">
+        <button class="nav-btn" id="cancel-processing"><i class="fas fa-arrow-left"></i> BACK TO SUBSCRIPTION</button>
+      </div>
+    </div>
+    <!-- No other buttons – user is stuck until timeout or activation -->
+  </div>
+
+  <!-- MARKET MODAL (unchanged) -->
+  <div id="market-modal" class="modal-overlay">
+    <div class="modal-content">
+      <h3 id="modal-market-title">KALYAN</h3>
+      <div class="result-grid" id="modal-result-grid"></div>
+      <button class="close-modal" id="close-modal-btn">CLOSE</button>
+    </div>
+  </div>
+
+  <!-- PROFILE PAGE (fixed) -->
+  <div id="profile-page" class="page">
+    <div class="extra-refresh"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH</button></div>
+    <h2>PROFILE</h2>
+    <div style="background:#0f1a2b; border-radius:2rem; padding:1.5rem; border:1px solid #38bdf8; text-align:center;">
+      <i class="fas fa-user-circle" style="font-size:4rem; color:#38bdf8; margin-bottom:1rem;"></i>
+      <div id="profile-name" style="font-size:1.3rem; font-weight:600;">-</div>
+      <div id="profile-mobile" style="color:#94a3b8; margin:0.5rem 0;">-</div>
+      <div id="profile-status" style="background:#1e3349; border-radius:2rem; padding:0.4rem; display:inline-block;">Subscription: <span id="sub-status">Inactive</span></div>
+    </div>
+    <div style="margin:1.5rem 0;">
+      <div style="display:flex; align-items:center; gap:1rem; padding:1rem; background:rgba(0,0,0,0.2); border-radius:2rem; border:1px solid #2d4055;">
+        <i class="fas fa-calendar-alt" style="color:#38bdf8;"></i> Joined: <span id="profile-join">-</span>
+      </div>
+    </div>
+    <div class="nav-bar">
+      <button class="nav-btn" id="back-from-profile"><i class="fas fa-arrow-left"></i> BACK</button>
+      <button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH</button>
+    </div>
+    <div class="extra-refresh" style="justify-content:center;"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH PAGE</button></div>
+  </div>
+
+  <!-- INFO PAGE (fixed) -->
+  <div id="info-page" class="page">
+    <div class="extra-refresh"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH</button></div>
+    <h2>INFO</h2>
+    <div style="display:flex; flex-direction:column; gap:1rem;">
+      <div class="helpline-link" style="justify-content:center;"><i class="fas fa-phone-alt"></i> +91 7353547650</div>
+      <div class="helpline-link" style="justify-content:center;"><i class="fab fa-whatsapp"></i> +91 7353547650</div>
+      <div class="helpline-link" style="justify-content:center;"><i class="fab fa-telegram"></i> <a href="tg://resolve?domain=rudrakshankg" style="color:#e2e8f0; text-decoration:none;">@rudrakshankg</a> (App) | <a href="https://t.me/rudrakshankg" style="color:#e2e8f0;">Web</a></div>
+    </div>
+    <div class="notice" style="margin-top:1.5rem;">
+      <strong style="color:#38bdf8;">📢 ABOUT</strong><br>
+      FIX GAME 777 is a premium matka guessing platform. All results are based on astrological calculations. We are not affiliated with any illegal business.
+    </div>
+    <div class="nav-bar">
+      <button class="nav-btn" id="back-from-info"><i class="fas fa-arrow-left"></i> BACK</button>
+      <button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH</button>
+    </div>
+    <div class="extra-refresh" style="justify-content:center;"><button class="nav-btn" onclick="location.reload()"><i class="fas fa-sync-alt"></i> REFRESH PAGE</button></div>
+  </div>
+</div> <!-- end #app -->
+    <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
@@ -754,10 +755,14 @@
       document.getElementById(pageId).classList.add('active');
     }
 
+    // UPDATED: showMarketModal with live date and time
     function showMarketModal(marketKey) {
       const market = config.markets[marketKey];
       if (!market) return;
-      document.getElementById('modal-market-title').innerText = market.name;
+      const now = new Date();
+      const dateStr = now.toLocaleDateString('en-IN', { day:'2-digit', month:'short', year:'numeric' });
+      const timeStr = now.toLocaleTimeString('en-IN', { hour:'2-digit', minute:'2-digit' });
+      document.getElementById('modal-market-title').innerHTML = `${market.name}<br><span style="font-size:0.8rem; color:#94a3b8;">${dateStr} ${timeStr}</span>`;
       const grid = document.getElementById('modal-result-grid');
       grid.innerHTML = '';
       const items = ['otc', 'support', 'jodi', 'pannel'];
